all css probs solved

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="starimg"></div>
     <div class="container">
       <div class="wrapper">
-        <button type="button" class="btn btn-secondary" id="renderBtn">
+        <button type="button" class="btn btn-secondary" id="toggleBtn">
           SHOW
         </button>
         <div class="homeworld-filter-container col-lg-4 d-flex gap-3"></div>
